// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-cbDwiu hUrOIj"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
Array [
  <p
    className="sc-cbDwiu hUrOIj"
  >
    Default color is Bulma
  </p>,
  <p
    className="sc-cbDwiu fucqMC"
    color="piccolo.100"
  >
    Piccolo
  </p>,
  <p
    className="sc-cbDwiu lgsYwI"
    color="trunks.100"
  >
    Trunks
  </p>,
  <p
    className="sc-cbDwiu khoUW"
    color="krillin.100"
  >
    Krillin
  </p>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <p
    className="sc-cbDwiu hUrOIj"
  >
    Default font-weight is regular
  </p>,
  <p
    className="sc-cbDwiu gwbmB"
  >
    Font-weight is bold
  </p>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <p
    className="sc-cbDwiu hUrOIj"
  >
    Line-height is pre-calculated
  </p>,
  <p
    className="sc-cbDwiu gDkPty"
  >
    Custon line-height
  </p>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <p
    className="sc-cbDwiu hUrOIj"
  >
    Paragraph is a default tag
  </p>,
  <span
    className="sc-cbDwiu hUrOIj"
  >
    Span tag
  </span>,
  <label
    className="sc-cbDwiu hUrOIj"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <p
    className="sc-cbDwiu hUrOIj"
  >
    Default font-size is 16px
  </p>,
  <p
    className="sc-cbDwiu chzVdM"
    size={24}
  >
    Size is 24px
  </p>,
  <p
    className="sc-cbDwiu dNZlxU"
    size={48}
  >
    Size is 48px
  </p>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <p
    className="sc-cbDwiu hUrOIj"
  >
    Text-align is not specified
  </p>,
  <p
    className="sc-cbDwiu gszJAU"
  >
    Centered Text
  </p>,
  <p
    className="sc-cbDwiu BRYyn"
  >
    Right alignment
  </p>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <p
    className="sc-cbDwiu hUrOIj"
  >
    Default text-decoration is none
  </p>,
  <p
    className="sc-cbDwiu jEArfW"
  >
    Underline Text
  </p>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <p
    className="sc-cbDwiu hUrOIj"
  >
    Default text-transform is none
  </p>,
  <p
    className="sc-cbDwiu jaMotE"
  >
    Uppercase Text
  </p>,
]
`;
